# SignalForge

./: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  LICENSE  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  rationale.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260327_0001_initial_schema.py  20260328_0002_analysis_reports.py  20260328_0003_alerts.py  20260328_0004_report_alert_event_link.py  20260328_0005_multi_asset_foundation.py  20260328_0006_watchlists.py  20260328_0007_recommendations.py  20260328_0008_portfolio.py  20260328_0009_recommendation_evaluation.py  20260328_0010_scoring_version.py  20260329_0011_position_exit_tracking.py  20260329_0012_protection_events.py  20260329_0013_entry_decisions.py  20260330_0014_runtime_heartbeats.py  20260403_0015_llm_usage_log.py  20260403_0016_ai_traders.py  20260403_0017_news_articles.py  20260403_0018_chat_sessions.py
backend/app/: config.py  database.py  logging_config.py  main.py  scheduler.py
backend/app/academy/: __init__.py  content.py  router.py
backend/app/ai_assistant/: __init__.py  chat_service.py  models.py  portfolio_report.py  prompts.py  router.py  schemas.py  strategy_advisor.py
backend/app/ai_traders/: arena.py  base.py  context.py  exit_manager.py  models.py  pre_filter.py  registry.py  router.py
backend/app/alerts/: models.py  router.py  schemas.py  service.py
backend/app/anomalies/: models.py  router.py  schemas.py  service.py
backend/app/assets/: models.py  router.py  schemas.py  service.py
backend/app/backtest/: __init__.py  engine.py  router.py  schemas.py
backend/app/core/: error_buffer.py  exceptions.py  (+3 more)
backend/scripts/: test_arena.py
backend/tests/: conftest.py  test_academy.py  test_adx.py  test_ai_api.py  test_ai_report.py  test_ai_traders.py  test_anomaly_detectors_full.py  test_app_startup.py  test_auto_switch.py  test_backtest_api.py  test_backtest_engine.py  test_backtest_metrics.py  test_bot_btd.py  test_bot_dca.py  test_bot_grid.py  test_buy_cooldown.py  test_cci.py  test_circuit_breaker.py  test_consecutive_sl.py  test_daily_drawdown.py  test_dca.py  test_divergence_detector.py  test_entry_decisions_api.py  test_equity_curve.py  test_fibonacci.py  test_indicator_history.py  test_keltner.py  test_llm_router.py  test_marketplace.py  test_marketplace_copy.py  test_marketplace_ranking.py  test_mfi.py  test_mtf_indicators.py  test_mtf_scoring.py  test_news_aggregator.py  test_obv.py  test_optimizer.py  test_optimizer_api.py  test_pivot.py  test_portfolio_cycle.py  (+36 more)
(+238 files in other folders)
